--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # HyperEVM LP Monitor Dependencies
-# Version: 1.4.0
+# Version: 1.6.0 (PnL/IL Update)
 
 # Web3 for blockchain interactions
 web3>=6.0.0,<7.0.0
@@ -7,8 +7,15 @@ web3>=6.0.0,<7.0.0
 # HTTP requests for notifications (Telegram, Discord, Pushover APIs)
 requests>=2.28.0
 
-# Optional: Better JSON handling (already included in Python 3.7+)
-# json5>=0.9.0
+# Rich terminal UI for beautiful displays
+rich>=13.7.0
+
+# Database support (sqlite3 is built-in to Python 3.7+)
+# No additional install needed for SQLite
+
+# Optional: For even more advanced features
+# pandas>=2.0.0  # For advanced data analysis
+# plotly>=5.0.0  # For interactive charts (future feature)
 
 # Development/Testing dependencies (optional)
 # pytest>=7.0.0
